<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ezesky.likaa.MainActivity">







    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_action_settings"/>
    <item android:id="@+id/fbk"
        android:title="@string/fbk"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/facebook"/>

    <item android:id="@+id/acc"
        android:title="@string/accueil"
        android:orderInCategory="100"
        app:showAsAction="never"
      />


</menu>
