<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abidjan2"
    android:id="@+id/navigation_drawer_layout"
    android:fitsSystemWindows="@bool/fitsSystemWindows"

    >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/abidjan2">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >






    <TextView android:id="@+id/num_bus"

        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#ffffff" android:gravity="center_horizontal"
    android:layout_marginTop="80dp"
    android:layout_marginLeft="15dp"
        android:background="@color/md_green_500_50"
        android:text="NUMERO"
        android:textSize="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />



    <ImageView
        android:id="@+id/img_bus"

        android:src="@drawable/bus_ordinaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"

        android:layout_marginTop="80dp"
        android:layout_toRightOf="@id/num_bus"
        android:layout_marginLeft="10dp"
        />

    <TextView

        android:text="allant de"
        android:textSize="35dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/num_bus"
        android:layout_marginTop="20dp"
        android:background="@color/md_grey_500_50"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />



<TextView
    android:id="@+id/depart_bus"
    android:textSize="25dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_amber_500_50"
    android:text="@string/depart_bus"
    android:textColor="#ffffff"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:layout_below="@id/num_bus"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
     />


    <TextView

        android:text="à"
        android:textSize="35dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/depart_bus"
        android:layout_marginTop="10dp"
        android:background="@color/md_grey_500_50"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

<TextView
    android:textSize="25dp"
    android:id="@+id/terminus_bus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_amber_500_50"
    android:text="@string/terminus_bus"
    android:textColor="#ffffff"
    android:layout_centerHorizontal="true"
      android:layout_marginBottom="10dp"
    android:layout_below="@id/depart_bus"
    android:layout_marginTop="70dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    android:gravity="center_horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
     />

    <TextView

        android:text="Détails "
        android:textSize="35dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/terminus_bus"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/md_grey_500_50"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

<TextView
    android:textSize="25dp"

    android:id="@+id/detail_bus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_amber_500_50"
    android:text="@string/detail_bus"
    android:textColor="#ffffff"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/terminus_bus"
    android:layout_marginTop="90dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"

     />

<TextView

    android:textSize="35dp"
    android:id="@+id/prix"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_green_500_50"
    android:textColor="#ffffff"
    android:text="Prix"
    android:gravity="center_horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"

    android:layout_centerHorizontal="true"
    android:layout_below="@id/detail_bus"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="30dp"
/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ToolbarTheme"
        />

    
</RelativeLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="@bool/fitsSystemWindows"
        app:headerLayout="@layout/navigation_drawer_header_bus"
        app:menu="@menu/navigation_drawer_menu_bus"
        android:theme="@style/NavigationViewTheme_Bus" />






</androidx.drawerlayout.widget.DrawerLayout>